Fix double scrollbar issue. 	modified:   assets/stylesheets/styles.scss

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -173,7 +173,7 @@ img {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 #overlay {
